--- a/solutions_personal.html
+++ b/solutions_personal.html
@@ -332,7 +332,7 @@
         <div class="bottom_content">準備好迎接新點子了嗎？</div>
         <!-- 立即開始 -->
         <div class="container mt-3">
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal2">
+          <button type="button" class="btn btn-primary btn_act" data-toggle="modal" data-target="#myModal2">
             立即開始
           </button>
         
@@ -713,7 +713,7 @@
           $('html,body').animate({
             scrollTop:$("#feature_banner3").offset().top
           }, 750);
-        });
+        }); 
       });
 
 
