search img modified

--- a/dream_story.html
+++ b/dream_story.html
@@ -209,14 +209,14 @@
 
         </div>
       </div>
-
+ 
 
       <div class="aside_right">
 
         <div class="search_bar">
           <input type="search" id="site-search" name="q"
             aria-label="Search through site content" placeholder="搜尋靈感">
-          <button class="search_btn"><img src="../images/dream_story/search.svg" class="search"></button>
+          <button class="search_btn"><img src="./images/dream_story/search.svg" class="search"></button>
         </div>
 
         <div class="tags_area">
