--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </div>
 
     <div class="index_scroll_block">
-      <img src="./images/index/scrolldown.png" class="scroll_down" loading="lazy">
+      <img src="./images/index/scroll.png" class="scroll_down" loading="lazy">
     </div>
 
 
