--- a/solutions_personal.html
+++ b/solutions_personal.html
@@ -277,7 +277,7 @@
         </div>
       </div>
 
-
+ 
       <div class="feature_banner" id="feature_banner2">
         <div class="feature_img">
           <div class="layer_container">
@@ -298,7 +298,7 @@
             透過自己的夢想倉庫分類作為索引，以同心圓的顏色和空間層次創造視覺上的聯想，快速找到想法歸檔的位置，不讓靈感輕易溜走！
           </div>
           <div class="feature_highlight2">
-            第二步，依照計畫的項目需求，在 set up 內建的資料庫找到最適合你的圖表工具。
+            第二步，依照計畫的項目需求，在 set up 內建的資料庫找到最適合你的圖表工具，開始一步步建構你的夢想計畫。
           </div> 
           <button type="button" class="back_to_feature" id="go_back2">
             <img src="./images/personal/angle-up.png" class="angle_up">
