--- a/dream_map.html
+++ b/dream_map.html
@@ -523,7 +523,14 @@
             </div>
 
             <div class="copyrights_statement">
-              本網站為緯育TibaMe前端設計工程師班第72期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:XXXXXXXXXXXXX。<br>若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/TibaMe/" class="tibame_link">[緯育TibaMe]</a>，後續會由專人協助處理。
+              本網站為緯育TibaMe前端設計工程師班第72期學員專題作品，本平台僅供學習、展示之用。<br>
+              參考資源：<a href="https://tw.alphacamp.co/" class="reference">ALPHA Camp</a> | 
+              <a href="https://designstripe.com/" class="reference">designstripe</a> | 
+              <a href="https://trello.com/home" class="reference">Trello</a> | 
+              <a href="https://www.notion.so/product" class="reference">Notion</a> | 
+              <a href="https://medium.com/" class="reference">Medium</a> | 
+              <a href="https://miro.com/" class="reference">miro</a>。<br>
+              若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/TibaMe/" class="tibame_link">[緯育TibaMe]</a>，後續會由專人協助處理。
             </div>
         </div>
 
