--- a/dream_story.html
+++ b/dream_story.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <title>set up | 夢想家專欄 - 從愛吃甜點的女孩到成立第一間烘焙工作室：Canelé Studio 創辦人 Linda Wang</title>
 
@@ -33,7 +30,7 @@
               </li>
               <li>
                 <div class="solution_block">
-                  方案
+                  <span class="triangle">方案</span>
                   <ul class="solution_list">
                     <li>
                       <a href="./solutions_personal.html">個人</a>
@@ -604,6 +601,10 @@
     </footer>
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
     //回到頂部
@@ -615,9 +616,7 @@
           }, 750);
         });
       });
-    </script>
-
-    <script>
+    
       $(function() {
         $(window).scroll(function() {
           if ($(this).scrollTop() > 450)  {          /* 要滑動到選單的距離 */
@@ -628,11 +627,5 @@
         });
       });
     </script>
-
-
-
-    
-
-
   </body>
 </html>
