--- a/dream_map.html
+++ b/dream_map.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
     <title>set up | 夢想地圖</title>
 
@@ -33,7 +30,7 @@
               </li>
               <li>
                 <div class="solution_block">
-                  方案
+                  <span class="triangle">方案</span>
                   <ul class="solution_list">
                     <li>
                       <a href="./solutions_personal.html">個人</a>
@@ -680,6 +677,10 @@
 
 
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script>
     //回到頂部
@@ -691,9 +692,7 @@
           }, 750);
         });
       });
-    </script>
-
-    <script>
+    
       $(function() {
         $(window).scroll(function() {
           if ($(this).scrollTop() > 450)  {          /* 要滑動到選單的距離 */
@@ -703,9 +702,7 @@
           }
         });
       });
-    </script>
-
-    <script>
+    
     //跑到下方專欄區塊
       $(function(){
         $("#go_down").on("click", function(e){
