--- a/index.html
+++ b/index.html
@@ -679,8 +679,8 @@
           slidesToScroll: 1,
           arrows: true,
           dots: true,
-          autoplay: true,
-          autoplaySpeed: 2000,
+          // autoplay: true,
+          // autoplaySpeed: 2000,
           // centerMode: true,
           centerPadding: "0px",
           respondTo: "slider",
