--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <title>set up | 關於</title>
-
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/about.css">
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap');
     </style>
-
+ 
  
   </head>
  
