--- a/community.html
+++ b/community.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
   <title>set up | 社群 Community</title>
-
+  <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon">
   <link rel="stylesheet" href="./css/community.css">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
