--- a/dream_map.html
+++ b/dream_map.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <title>set up | 夢想地圖</title>
-
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/dream_map.css">
 
     <style>
