--- a/dream_story.html
+++ b/dream_story.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <title>set up | 夢想家專欄 - 從愛吃甜點的女孩到成立第一間烘焙工作室：Canelé Studio 創辦人 Linda Wang</title>
-
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/dream_story.css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
