--- a/solutions_quick_check.html
+++ b/solutions_quick_check.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>set up | 目標健檢</title>
-
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="./css/check.css">
 
     <style>
