--- a/check2.html
+++ b/check2.html
@@ -5,7 +5,7 @@
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>set up | 一分鐘目標健檢 - 2</title>
-
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/check2.css">
 
     <style>
