--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     
     <title>set up | 夢想，從建立開始</title>
 
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" type="text/css" href="./slick/slick.css"/>
     <link rel="stylesheet" type="text/css" href="./slick/slick-theme.css"/>
   
-
+ 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap');
     </style> 
