--- a/solutions_personal.html
+++ b/solutions_personal.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
     <title>set up | 方案 - 個人</title>
-
+    <link rel="icon" href="./images/logo/logo.ico" type="image/x-icon"> 
     <link rel="stylesheet" href="./css/personal.css">
 
     <style>
