--- a/index.html
+++ b/index.html
@@ -694,6 +694,9 @@
           dots: true,
           autoplay: true,
           autoplaySpeed: 2000,
+          arrows: true,
+          // prevArrow:"<embed class='prev slick-prev' src='./images/index/angle-left.svg'>",
+          // nextArrow:"<embed class='next slick-next' src='./images/index/angel-right.svg'>",
           respondTo: "slider",
           // centerMode: true,
           // centerPadding: '60px',
