--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </button>
         </div>
       </div>
-
+ 
       <div class="step_two_block">
         <div class="each_step_intro">
           <div class="step_title_eng">STEP. 2</div>
@@ -394,8 +394,10 @@
             <div class="sitemap_parent"><a href="./dream_map.html" class="footer_page_link">夢想地圖</a></div>
             
             <div class="footer_login_signup_block">
-
-              
+              <!--登入-->
+            <button class="btn_modal_login btn_footer">登入</button>
+            <!--註冊-->
+            <button class="btn_modal_signup btn_footer">註冊</button>
             </div>
           </div>
         </div>
@@ -449,10 +451,10 @@
           // centerMode: true,
           // centerPadding: '60px',
           responsive:[
-            {breakpoint:1440, settings:{
-              slidesToShow:3,
-            }},
-            {breakpoint:768.98, settings:{
+            // {breakpoint:1440, settings:{
+            //   slidesToShow:3,
+            // }},
+            {breakpoint:1080, settings:{
               slidesToShow:2,
             }},
             {breakpoint:720, settings:{
