--- a/index.html
+++ b/index.html
@@ -395,9 +395,9 @@
             
             <div class="footer_login_signup_block">
               <!--登入-->
-            <button class="btn_modal_login btn_footer">登入</button>
-            <!--註冊-->
-            <button class="btn_modal_signup btn_footer">註冊</button>
+              <button class="btn_modal_login btn_footer">登入</button>
+              <!--註冊-->
+              <button class="btn_modal_signup btn_footer">註冊</button>
             </div>
           </div>
         </div>
@@ -406,7 +406,7 @@
     </footer>
 
   
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./js/jquery-3.6.0.js"></script>
   
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -460,7 +460,7 @@
             {breakpoint:720, settings:{
               slidesToShow:1,
             }},
-          ],
+          ], 
         });
       });
 
