--- a/about.html
+++ b/about.html
@@ -239,7 +239,7 @@
         <div class="our_team">
           <div class="team_title">我們的團隊</div>
           <div class="team_intro">
-            set up 團隊結合各領域專業人才，以人本的思考結合科技的創新，<br>致力於設計符合使用者需求，並且能夠簡易上手的操作介面。
+            set up 團隊結合各領域專業人才，<br>以人本的思考結合科技的創新，<br>致力於設計符合使用者需求，<br>並且能夠簡易上手的操作介面。
           </div>
           <div class="team_intro">
             我們相信 A user experience a universe. <br>創造讓每個人的創意思考都能自由流動與分享的體驗，<br>是團隊共同努力的目標。我們共享的特質：
