--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
         <div class="our_mission">
           <div class="mission_title">我們的使命</div>
           <div class="mission_intro">
-            set up 是一款生產力工具，<br>致力於透過視覺化的方式，結合科技與人類心智的圖景，<br>協助使用者針對不同的目標，逐步建構自己的夢想實現藍圖，<br>分享並連結線上的使用者，形成支持性的社群系統。
+            set up 是一款生產力工具，致力於透過視覺化的方式，結合科技與人類心智的圖景，協助使用者針對不同的目標，逐步建構自己的夢想實現藍圖，分享並連結線上的使用者，形成支持性的社群系統。
           </div>
         </div>
 
@@ -239,10 +239,10 @@
         <div class="our_team">
           <div class="team_title">我們的團隊</div>
           <div class="team_intro">
-            set up 團隊結合各領域專業人才，<br>以人本的思考結合科技的創新，<br>致力於設計符合使用者需求，<br>並且能夠簡易上手的操作介面。
+            set up 團隊結合各領域專業人才，以人本的思考結合科技的創新，致力於設計符合使用者需求，並且能夠簡易上手的操作介面。
           </div>
           <div class="team_intro">
-            我們相信 A user experience a universe. <br>創造讓每個人的創意思考都能自由流動與分享的體驗，<br>是團隊共同努力的目標。我們共享的特質：
+            我們相信 A user experience a universe. <br>創造讓每個人的創意思考都能自由流動與分享的體驗，是團隊共同努力的目標。我們共享的特質：
           </div> 
         </div>
 
