--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="index_first_banner_content">
         <div class="banner_leftside">
           <div class="index_first_banner_slogan">夢想，從 set up 開始</div>
-          <div class="index_first_banner_introduction">在一天 24 小時不夠用的時代，<br>需要智慧的工具為你創造更好的效率。<br>set up 讓科技成為人類心智的好朋友，啟發新點子，<br>將夢想化為日常的累積，加速夢想實現的路徑！</div>
+          <div class="index_first_banner_introduction">在一天 24 小時不夠用的時代，<br>需要智慧的工具為你創造更好的效率。<br>set up 讓科技成為人類心智的好朋友，<br class="-break">啟發新點子，<br>將夢想化為日常的累積，<br class="-break">加速夢想實現的路徑！</div>
           <a href="./solutions_personal.html" class="btn_action">立即體驗</a>
         </div>
         <img src="./images/index/start.png" class="start" loading="lazy">
@@ -274,7 +274,7 @@
         <div class="community_info">
           <div class="community_info_title">加入 set up 社群，分享彼此的點子！</div>
           <div class="community_info_content">
-            每張 set up 夢想地圖的背後，都是一段激勵人心的故事。<br>分享你的經驗、閱讀他們的故事，給予彼此回饋與支持！
+            每張 set up 夢想地圖的背後，<br class="-break1">都是一段激勵人心的故事。<br>分享你的經驗、閱讀他們的故事，<br class="-break1">給予彼此回饋與支持！
           </div>
         </div>
       </div>
