--- a/solutions_personal.html
+++ b/solutions_personal.html
@@ -520,7 +520,7 @@
   
       // 點擊漢堡按鈕，導覽列縮放
       $("button.hamburger").on("click", function(){
-        $("nav.nav, div.login_signup_block").slideToggle();
+        $("nav.nav, div.login_signup_block").fadeToggle();
       });
 
       $(function(){
