--- a/community.html
+++ b/community.html
@@ -555,7 +555,7 @@
           let scrollTop = $(window).scrollTop();
           let anchor = $("div.right_dialog").offset().top;
           //console.log(scrollTop);
-          console.log(anchor);
+          //console.log(anchor);
           if(scrollTop > anchor){
             $("img.bike").addClass("-ani");
           };
