--- a/index.html
+++ b/index.html
@@ -443,7 +443,8 @@
           arrows: true,
           dots: true,
           autoplay: true,
-          autoplaySpeed: 2000,
+          autoplaySpeed: 2500,
+          swipeToSlide: true,
           arrows: true,
           // prevArrow:"<embed class='prev slick-prev' src='./images/index/angle-left.svg'>",
           // nextArrow:"<embed class='next slick-next' src='./images/index/angel-right.svg'>",
