--- a/dream_story.html
+++ b/dream_story.html
@@ -176,7 +176,13 @@
       </div>
     </header>
 
-
+    <div class="bread">
+      <a href="./index.html" class="index">首頁</a>
+      <span class="next"> > </span>
+      <a href="./dream_map.html" class="previous">夢想地圖</a>
+      <span class="next"> > </span>
+      <span class="page_now">夢想家專欄</span>
+    </div>
     <div class="parent_container">
       <div class="aside_left">
         <div class="title_area">
