--- a/dream_story.html
+++ b/dream_story.html
@@ -294,7 +294,9 @@
         <div class="search_bar">
           <input type="search" id="site-search" name="q"
             aria-label="Search through site content" placeholder="搜尋靈感">
-          <button class="search_btn"><embed src="./images/dream_story/search.svg" class="search"></button>
+          <button type="submit" class="search_btn">
+            <img src="./images/dream_story/search.png" class="search">
+          </button>
         </div>
 
         <div class="tags_area">
