--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
           autoplay: true,
           autoplaySpeed: 2500,
           respondTo: "slider",
+          swipeToSlide: true,
           responsive:[
             {breakpoint:1080, settings:{
               slidesToShow:2,
