--- a/check5.html
+++ b/check5.html
@@ -123,7 +123,7 @@
               </li>
               <li>
                 <div class="solution_block">
-                  <span class="now_page triangle">方案</span>
+                  <span class="triangle">方案</span>
                   <ul class="solution_list">
                     <li>
                       <a href="./solutions_personal.html">個人</a>
@@ -135,7 +135,8 @@
                       <a href="./solutions_personal.html">新創</a>
                     </li>
                     <li>
-                      <a href="./solutions_quick_check.html">目標健檢</a>
+                      <a href="./solutions_quick_check.html">
+                        <span class="now_page">目標健檢</span></a>
                     </li>
                   </ul>
                 </div>
@@ -149,14 +150,13 @@
                 <a href="./dream_map.html">夢想地圖</a>
               </li>
             </ul>
+            <div class="login_signup_block">
+              <!--登入-->
+              <button class="btn_modal_login">登入</button>
+              <!--註冊-->
+              <button class="btn_modal_signup">註冊</button>
+            </div>
           </nav>
-
-          <div class="login_signup_block">
-            <!--登入-->
-            <button class="btn_modal_login">登入</button>
-            <!--註冊-->
-            <button class="btn_modal_signup">註冊</button>
-          </div>
         </div>
       </div> 
 
