--- a/solutions_personal.html
+++ b/solutions_personal.html
@@ -124,10 +124,11 @@
               </li>
               <li>
                 <div class="solution_block">
-                  <span class="now_page triangle">方案</span>
+                  <span class="triangle">方案</span>
                   <ul class="solution_list">
                     <li>
-                      <a href="./solutions_personal.html">個人</a>
+                      <a href="./solutions_personal.html">
+                        <span class="now_page">個人</span></a>
                     </li>
                     <li>
                       <a href="./solutions_personal.html">團隊</a>
@@ -150,14 +151,13 @@
                 <a href="./dream_map.html">夢想地圖</a>
               </li>
             </ul>
-          </nav>
-
-          <div class="login_signup_block">
-            <!--登入-->
-            <button class="btn_modal_login">登入</button>
-            <!--註冊-->
-            <button class="btn_modal_signup">註冊</button>
-          </div>
+            <div class="login_signup_block">
+              <!--登入-->
+              <button class="btn_modal_login">登入</button>
+              <!--註冊-->
+              <button class="btn_modal_signup">註冊</button>
+            </div>
+          </nav>          
         </div>
       </div> 
 
