--- a/check1.html
+++ b/check1.html
@@ -180,7 +180,7 @@
           </div>
           <form action="./check2.html" method="get">
             <input type="name" class="test_name" placeholder="如何稱呼你？" name="user_name"><br>
-            <a href="./check2.html" class="next_page">
+            <a href="#" class="next_page">
               <button type="submit" class="btn_next">
               繼續
               </button>
@@ -255,6 +255,7 @@
     </footer>
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/check.js"></script>
 
     <script>
     //回到頂部
