--- a/check2.html
+++ b/check2.html
@@ -174,7 +174,7 @@
       <div class="question_container">
         <div class="leftside">
           <div class="question_title">
-            <span>Username</span>，<br>說說你現在最想完成的一件事
+            <span id="user_name">Username</span>，<br>說說你現在最想完成的一件事
           </div>
           <div class="question_text">
             迎接美好願景的第一步：為腦中的想像賦予清楚的輪廓。
@@ -257,6 +257,8 @@
 
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/insert_name.js"></script>
+
     <script>
     //回到頂部
       $(function(){
