--- a/check4.html
+++ b/check4.html
@@ -174,7 +174,7 @@
       <div class="question_container">
         <div class="leftside">
           <div class="question_title">
-            <span>Username</span>，讓我們再往前走一點
+            <span id="user_name">Username</span>，讓我們再往前走一點
           </div>
           <div class="question_text">
             夢想的地圖已經展開。<br>現在，寫下關於你的夢想的關鍵字，自在發揮。
@@ -256,6 +256,7 @@
 
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="js/insert_name.js"></script>
 
     <script>
     //回到頂部
