--- a/check5.html
+++ b/check5.html
@@ -178,7 +178,7 @@
             開始建立你的夢想地圖
           </div>
           <div class="question_text">
-            <span>Username</span>，恭喜你與我們一起走到這裡！<br>最後一步，留下你的 email 信箱，領取專屬於你的報告。<br>準備好展開新旅程了嗎？
+            <span id="user_name">Username</span>，恭喜你與我們一起走到這裡！<br>最後一步，留下你的 email 信箱，領取專屬於你的報告。<br>準備好展開新旅程了嗎？
           </div>
           <form action="./dream_map.html" method="get">
             <input type="email" class="test_email" placeholder="輸入你的email" name="email"><br>
@@ -258,6 +258,7 @@
 
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/insert_name.js"></script>
 
     <script>
     //回到頂部
