--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
       <div class="index_first_banner_content">
         <div class="banner_leftside">
-          <div class="index_first_banner_slogan">夢想，從 set up 開始</div>
+          <div class="index_first_banner_slogan"></div>
           <div class="index_first_banner_introduction">在一天 24 小時不夠用的時代，<br>需要智慧的工具為你創造更好的效率。<br>set up 讓科技成為人類心智的好朋友，<br class="-break">啟發新點子，<br>將夢想化為日常的累積，<br class="-break">加速夢想實現的路徑！</div>
           <a href="./solutions_personal.html" class="btn_action">立即體驗</a>
         </div>
@@ -409,6 +409,7 @@
 
   
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/type.js"></script>
   
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
