--- a/check2.html
+++ b/check2.html
@@ -179,7 +179,7 @@
           <div class="question_text">
             迎接美好願景的第一步：為腦中的想像賦予清楚的輪廓。
           </div>
-          <form action="./check3.html" method="get">
+          <form action="./check3.html" method="get" class="wish">
             <textarea class="test_q2" name="wish_list" rows="5" cols="50" placeholder="最想完成的事"></textarea>  
             <a href="./check3.html" class="next_page">
               <button type="submit" class="btn_next">
@@ -258,6 +258,8 @@
 
     <script src="./js/jquery-3.6.0.js"></script>
     <script src="./js/insert_name.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
