--- a/check3.html
+++ b/check3.html
@@ -179,7 +179,7 @@
           <div class="question_text">
             現在，思考這件事對你來說的特殊意義：<br>為什麼這會是你最想完成的事呢？
           </div>
-          <form action="./check4.html" method="get">
+          <form action="./check4.html" method="get" class="goal">
             <textarea class="test_q2" placeholder="寫下你的想法" name="motivation"></textarea>
             <a href="./check4.html" class="next_page">
               <button type="submit" class="btn_next">
@@ -257,6 +257,8 @@
 
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
