--- a/check4.html
+++ b/check4.html
@@ -179,7 +179,7 @@
           <div class="question_text">
             夢想的地圖已經展開。<br>現在，寫下關於你的夢想的關鍵字，自在發揮。
           </div>
-          <form action="./check5.html" method="get">
+          <form action="./check5.html" method="get" class="keywords">
             <textarea type="text" class="test_q2" placeholder="我的夢想關鍵字" name="first_step"></textarea>
             <a href="./check5.html" class="next_page">
               <button type="submit" class="btn_next">
@@ -257,6 +257,8 @@
 
     <script src="./js/jquery-3.6.0.js"></script>
     <script src="js/insert_name.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
