--- a/check5.html
+++ b/check5.html
@@ -180,7 +180,7 @@
           <div class="question_text">
             <span id="user_name">Username</span>，恭喜你與我們一起走到這裡！<br>最後一步，留下你的 email 信箱，領取專屬於你的報告。<br>準備好展開新旅程了嗎？
           </div>
-          <form action="./dream_map.html" method="get">
+          <form action="./dream_map.html" method="get" class="report">
             <input type="email" class="test_email" placeholder="輸入你的email" name="email"><br>
             <a href="./dream_map.html" class="next_page">
               <button type="submit" class="btn_next">
@@ -259,6 +259,8 @@
 
     <script src="./js/jquery-3.6.0.js"></script>
     <script src="./js/insert_name.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
