--- a/solutions_quick_check.html
+++ b/solutions_quick_check.html
@@ -266,6 +266,7 @@
 
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/modal_toggle.js"></script>
 
     <script>
     //回到頂部
