--- a/about.html
+++ b/about.html
@@ -367,6 +367,8 @@
 
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
