--- a/check1.html
+++ b/check1.html
@@ -256,6 +256,8 @@
 
     <script src="./js/jquery-3.6.0.js"></script>
     <script src="./js/check.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
