--- a/community.html
+++ b/community.html
@@ -480,6 +480,7 @@
     </footer>
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/modal_toggle.js"></script>
 
     
     <!--載入aos-->
