--- a/dream_map.html
+++ b/dream_map.html
@@ -549,6 +549,8 @@
     </footer>
 
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
 
     <script>
     //回到頂部
