--- a/index.html
+++ b/index.html
@@ -410,6 +410,7 @@
   
     <script src="./js/jquery-3.6.0.js"></script>
     <script src="./js/type.js"></script>
+    <script src="./js/modal_toggle.js"></script>
   
     
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
