--- a/solutions_personal.html
+++ b/solutions_personal.html
@@ -403,8 +403,9 @@
       </div>
     </footer>
 
-    <!-- 載入 jQuery -->
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/modal_toggle.js"></script>
+
     
     <script>
       $(function(){
