nav solution toggle

--- a/community.html
+++ b/community.html
@@ -173,7 +173,7 @@
   </header>
 
   <div class="dialog_container">
-    <div class="left_dialog_container" data-aos="fade-up-right" data-aos-duration="1000">
+    <div class="left_dialog_container" data-aos="fade-up" data-aos-duration="1000">
       <div class="left_dialog">
         <div class="dialog_title">
           噢，你也在這裡嗎？
@@ -184,7 +184,7 @@
       </div>
     </div>
     
-    <div class="right_dialog_container" data-aos="fade-up-left" data-aos-duration="1000" data-aos-delay="200">
+    <div class="right_dialog_container" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
       <div class="right_dialog">
         <div class="dialog_title">
           加入 set up community，<br>創造更多夢想的可能！</div>
