--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="steps_intro">set up! 5步驟輕鬆上手</div>
       </div>
 
-      <div class="step_one_block" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="step_one_block" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
         <embed src="./images/index/step_one.svg" class="step_img">
         <div class="each_step_intro">
           <div class="step_title_eng">STEP. 1</div>
@@ -217,7 +217,7 @@
         </div>
       </div>
  
-      <div class="step_two_block" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="step_two_block" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
         <div class="each_step_intro">
           <div class="step_title_eng">STEP. 2</div>
           <div class="step_title_zh">選擇適合你的方案</div>
@@ -229,7 +229,7 @@
         <embed src="./images/index/step_two.svg" class="step_img">
       </div>
 
-      <div class="step_three_block" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="step_three_block" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
         <embed src="./images/index/step_three.svg" class="step_img">
         <div class="each_step_intro">
           <div class="step_title_eng">STEP. 3</div>
@@ -240,7 +240,7 @@
         </div>
       </div>
 
-      <div class="step_four_block" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="step_four_block" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
         <div class="each_step_intro">
           <div class="step_title_eng">STEP. 4</div>
           <div class="step_title_zh">聚焦並建立執行步驟</div>
@@ -251,7 +251,7 @@
         <embed src="./images/index/step_four.svg" class="step_img">
       </div>
 
-      <div class="step_five_block" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
+      <div class="step_five_block" data-aos="fade-up" data-aos-anchor-placement="center-bottom">
         <embed src="./images/index/step_five.svg" class="step_img">
         <div class="each_step_intro">
           <div class="step_title_eng">STEP. 5</div>
