--- a/check1.html
+++ b/check1.html
@@ -202,32 +202,27 @@
       <div class="footer_container">
         <div class="footer_leftside">
           <img src="./images/logo/logo.svg" class="logo_footer">
-            <div class="copyrights">
-              2021 &copy; All rights reserved
-            </div>
+          <div class="copyrights">
+            2021 &copy; All rights reserved
+          </div>
 
-            <div class="social_media_block">
-              <a href="https://www.facebook.com/" class="social_media_link">
-                <embed src="./images/footer/facebook-f.png" class="social_media_logo">
-              </a>
-              <a href="https://twitter.com/" class="social_media_link">
-                <embed src="./images/footer/twitter.png" class="social_media_logo">
-              </a>
-              <a href="https://www.instagram.com/" class="social_media_link">
-                <embed src="./images/footer/instagram.png" class="social_media_logo">
-              </a>
-              <a href="https://www.youtube.com/" class="social_media_link">
-                <embed src="./images/footer/youtube.png" class="social_media_logo">
-              </a>
-            </div>
-
-            <div class="copyrights_statement">
-              本網站為緯育TibaMe前端設計工程師班第72期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:XXXXXXXXXXXXX。<br>若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/TibaMe/" class="tibame_link">[緯育TibaMe]</a>，後續會由專人協助處理。
-            </div>
+          <div class="social_media_block">
+            <a href="https://www.facebook.com/" class="social_media_link">
+              <embed src="./images/footer/facebook-f.png" class="social_media_logo">
+            </a>
+            <a href="https://twitter.com/" class="social_media_link">
+              <embed src="./images/footer/twitter.png" class="social_media_logo">
+            </a>
+            <a href="https://www.instagram.com/" class="social_media_link">
+              <embed src="./images/footer/instagram.png" class="social_media_logo">
+            </a>
+            <a href="https://www.youtube.com/" class="social_media_link">
+              <embed src="./images/footer/youtube.png" class="social_media_logo">
+            </a>
+          </div>
         </div>
 
         <div class="footer_rightside">
-
           <div class="sitemap">
             <div class="sitemap_parent"><a href="./about.html" class="footer_page_link">關於</a></div>
 
@@ -242,15 +237,25 @@
 
             <div class="sitemap_parent"><a href="./community.html" class="footer_page_link">社群</a></div>
             <div class="sitemap_parent"><a href="./dream_map.html" class="footer_page_link">夢想地圖</a></div>
-            <div class="footer_login_signup_block">
-              <!--登入-->
-              <button class="btn_modal_login btn_footer">登入</button>
-              <!--註冊-->
-              <button class="btn_modal_signup btn_footer">註冊</button>
-            </div>
+          </div>
+          <div class="footer_login_signup_block">
+            <!--登入-->
+            <button class="btn_modal_login btn_footer">登入</button>
+            <!--註冊-->
+            <button class="btn_modal_signup btn_footer">註冊</button>
           </div>
         </div>
+      </div>
 
+      <div class="copyrights_statement">
+        本網站為緯育TibaMe前端設計工程師班第72期學員專題作品，本平台僅供學習、展示之用。
+        參考資源：<a href="https://tw.alphacamp.co/" class="reference">ALPHA Camp</a> | 
+        <a href="https://designstripe.com/" class="reference">designstripe</a> | 
+        <a href="https://trello.com/home" class="reference">Trello</a> | 
+        <a href="https://www.notion.so/product" class="reference">Notion</a> | 
+        <a href="https://medium.com/" class="reference">Medium</a> | 
+        <a href="https://miro.com/" class="reference">miro</a>。
+        若有侵權疑慮，您可以私訊<a href="https://www.facebook.com/TibaMe/" class="tibame_link">[緯育TibaMe]</a>，後續會由專人協助處理。
       </div>
     </footer>
 
