--- a/dream_story.html
+++ b/dream_story.html
@@ -291,11 +291,13 @@
       <div class="aside_right">
 
         <div class="search_bar">
-          <input type="search" id="site-search" name="q"
-            aria-label="Search through site content" placeholder="搜尋靈感">
-          <button type="submit" class="search_btn">
-            <img src="./images/dream_story/search.png" class="search">
-          </button>
+          <form action="#" method="get" class="search_form">
+            <input type="search" id="site-search" name="q"
+              aria-label="Search through site content" placeholder="搜尋靈感">
+            <button type="submit" class="search_btn">
+              <img src="./images/dream_story/search.png" class="search">
+            </button>
+          </form>
         </div>
 
         <div class="tags_area">
